--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -20,19 +20,24 @@ header, footer {
     margin: 6px 0;
 }
 
-/*.footer {
+/*https://stackoverflow.com/a/53855189/548473*/
+#noty_layout__bottomRight {
+    width: 385px !important;
+}
+.footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px; !* Set the fixed height of the footer here *!
-    line-height: 60px; !* Vertically center the text there *!
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
-}*/
-
-body {
-    margin-bottom: 60px;
 }
 
+body {
+    margin-bottom: 60px !important; /* Margin bottom by footer height */
+}
+
+/*https://getbootstrap.com/docs/4.0/examples/sticky-footer/sticky-footer.css*/
 html {
     position: relative;
     min-height: 100%;
